--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.2</version>
-                <configuration>
-                    <!--<suiteXmlFiles>
+                <!--<configuration>
+                    <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>-->
-                </configuration>
+                    </suiteXmlFiles>
+                </configuration>-->
             </plugin>
         </plugins>
     </build>
